--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/x-icon" href="logo t.png"> 
   <link rel="stylesheet" href="style.css">
   <script type="module">
@@ -16,7 +15,7 @@
 </head>
 <body>
   <header class="site-header">
-    <nav>
+     <nav>
       <a href="index.html" class="logo">
         <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
       </a>
@@ -24,20 +23,13 @@
         <a href="products.html">Products</a>
         <a href="status.html">Order Status</a>
         <a href="admin.html">Admin</a>
-        <input id="search-input" type="search" placeholder="Search products..." style="padding: 6px 10px; border-radius: 8px; border: 1px solid #e5e7eb; margin-left: 14px;">
-        <a href="#" id="cart-link">Cart <span id="cart-count">0</span></a>
-        <button id="dark-mode-toggle">Toggle Dark Mode</button>
-        <a href="login.html">Login/Register</a>
+        <a id="cart-link" style="cursor: pointer;">Cart (<span id="cart-count">0</span>)</a>
       </div>
     </nav>
   </header>
 
  <main class="container">
-    <div class="hero-banner" style="background: #e8e8ff; padding: 40px; text-align: center; border-radius: 12px; margin-bottom: 20px;">
-      <h1>Welcome to The Geek Shop</h1>
-      <p>Your one-stop shop for geek accessories in Bangladesh. Shop now for keycaps, switches, and more!</p>
-      <button onclick="window.location.href='products.html'">Shop Now</button>
-    </div>
+    <h1>Welcome to The Geek Shop</h1>
 
     <h2>May Interest You</h2>
     <div id="interest-products" class="product-list new-hot-list"></div>
@@ -51,16 +43,56 @@
     <img id="viewer-img" src="" alt="">
   </div>
 
-  <!-- Cart Sidebar -->
-  <div id="cart-sidebar" class="cart-sidebar">
-    <button id="close-cart-sidebar" class="close-cart">&times;</button>
-    <h2>My Cart</h2>
-    <div id="cart-items"></div>
-    <div id="cart-total" class="price"></div>
-    <button id="checkout-cart">Checkout</button>
+  <!-- Cart Slider -->
+  <div id="cart-slider" class="cart-slider">
+    <button id="close-cart" class="close-viewer">&times;</button>
+    <h2>Shopping Cart</h2>
+    <div id="cart-items" class="cart-items"></div>
+    <div id="cart-total" class="cart-total"><strong>Total: ৳0</strong></div>
+    <button id="checkout-cart" class="checkout-cart-btn">Checkout</button>
+    <div id="cart-empty" class="muted" style="text-align:center; padding:20px; display:none;">Your cart is empty</div>
   </div>
 
-<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; color: #000000; font-family: Arial, sans-serif;">
+  <!-- Cart Checkout Modal -->
+  <div id="cart-checkout-modal" class="modal">
+    <div class="card modal-content">
+      <div class="modal-header">
+        <h2>Checkout (Cart)</h2>
+        <button id="cart-close-modal-btn">Close</button>
+      </div>
+      <form id="cart-checkout-form" class="form">
+        <div id="cart-co-items"></div>
+        <div class="row">
+          <div><label>Delivery Fee</label><input id="cart-co-delivery" readonly></div>
+          <div><label>Total Amount</label><input id="cart-co-total" readonly></div>
+        </div>
+        <div class="row">
+          <div><label>Name</label><input id="cart-co-name" required></div>
+          <div><label>Phone</label><input id="cart-co-phone" type="tel" required></div>
+        </div>
+        <div><label>Address</label><textarea id="cart-co-address" required></textarea></div>
+        <div class="row">
+          <div><label>Payment Method</label>
+            <select id="cart-co-payment" required>
+              <option value="">Select</option>
+              <option value="Cash on Delivery">Cash on Delivery</option>
+              <option value="Bkash">Bkash</option>
+            </select>
+          </div>
+          <div><label>Pay to</label><input id="cart-co-payment-number" readonly></div>
+        </div>
+        <div class="row">
+          <div><label>Pay Now (tk)</label><input id="cart-co-pay-now" readonly></div>
+          <div><label>Due Amount (tk)</label><input id="cart-co-due-amount" readonly></div>
+        </div>
+        <div><label>Transaction ID (if prepaid)</label><input id="cart-co-txn"></div>
+        <div><label><input type="checkbox" id="cart-co-policy" required> I agree to the <a href="status.html">Order Policy</a></label></div>
+        <button id="cart-place-order-btn" type="submit">Place Order</button>
+      </form>
+    </div>
+  </div>
+
+<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
   <div>
     <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
       <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
@@ -72,13 +104,7 @@
       <img src="whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
     </a>
   </div>
-  <h3>Newsletter</h3>
-  <form id="newsletter-form" style="max-width: 400px; margin: 0 auto;">
-    <input type="email" placeholder="Your email" required style="padding: 10px; width: 70%; border-radius: 8px; border: 1px solid #e5e7eb;">
-    <button type="submit" style="padding: 10px;">Subscribe</button>
-  </form>
   <p>&copy; All rights reserved by The Geek Shop</p>
-  <a href="blog.html">Blog</a>
 </footer>
 </body>
 </html>
