--- a/product.html
+++ b/product.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <header class="site-header">
-    <nav>
+     <nav>
       <a href="index.html" class="logo">
         <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
       </a>
@@ -25,17 +25,15 @@
         <a href="products.html">Products</a>
         <a href="status.html">Order Status</a>
         <a href="admin.html">Admin</a>
-        <input id="search-input" type="search" placeholder="Search products..." style="padding: 6px 10px; border-radius: 8px; border: 1px solid #e5e7eb; margin-left: 14px;">
-        <a href="#" id="cart-link">Cart <span id="cart-count">0</span></a>
-        <button id="dark-mode-toggle">Toggle Dark Mode</button>
-        <a href="login.html">Login/Register</a>
+        <a id="cart-link" style="cursor: pointer;">Cart (<span id="cart-count">0</span>)</a>
       </div>
     </nav>
   </header>
+
   <main class="container">
     <div id="product-section" class="product-detail">
       <div class="product-images">
-        <img id="main-image" loading="lazy" src="" alt="">
+        <img id="main-image" src="" alt="">
         <div id="thumbnail-gallery" class="thumbnail-gallery"></div>
       </div>
       <div class="product-info">
@@ -43,32 +41,15 @@
         <div id="product-color" class="muted"></div>
         <div id="product-price" class="price"></div>
         <div id="product-badges" class="badges"></div>
-        <p id="product-spec">No specification available</p> <!-- Fallback text -->
+        <p id="product-spec"></p>
         <div id="order-row" class="order-row"></div>
-        <button id="add-to-cart-btn">Add to Cart</button>
-        <div id="ratings" class="muted">Average Rating: <span id="avg-rating">0</span> ( <span id="review-count">0 reviews</span> )</div>
       </div>
     </div>
 
     <section class="product-description-section">
       <h2>Description</h2>
-      <div id="product-detailed-desc" class="description-content">No description available</div> <!-- Fallback text -->
+      <div id="product-detailed-desc" class="description-content"></div>
     </section>
-
-    <h2>Reviews</h2>
-    <div id="reviews-list"></div>
-    <form id="review-form" class="form">
-      <textarea id="review-text" placeholder="Write your review..." required></textarea>
-      <select id="review-rating" required>
-        <option value="">Rate 1-5</option>
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-      </select>
-      <button type="submit">Submit Review</button>
-    </form>
 
     <h2>Other Products</h2>
     <div id="other-products" class="product-list new-hot-list"></div>
@@ -86,100 +67,107 @@
         <button id="close-modal-btn">Close</button>
       </div>
       <form id="checkout-form" class="form">
-        <div id="checkout-items"></div>
+        <input type="hidden" id="co-product-id">
         <div class="row">
-          <div>
-            <label>Delivery</label>
-            <input id="co-delivery" readonly>
-          </div>
-          <div>
-            <label>Total (tk)</label>
-            <input id="co-total" readonly>
-          </div>
+          <div><label>Product Name</label><input id="co-product-name" readonly></div>
+          <div><label>Color</label><input id="co-color" readonly></div>
         </div>
         <div class="row">
-          <div>
-            <label>Name</label>
-            <input id="co-name" required>
-          </div>
-          <div>
-            <label>Phone</label>
-            <input id="co-phone" type="tel" required>
-          </div>
-        </div>
-        <div>
-          <label>Address</label>
-          <textarea id="co-address" required></textarea>
+          <div><label>Price (tk)</label><input id="co-price" readonly><input type="hidden" id="co-unit-price-raw"><input type="hidden" id="co-available-stock"></div>
+          <div><label>Quantity</label><input id="co-qty" type="number" min="1" value="1"></div>
         </div>
         <div class="row">
-          <div>
-            <label>Payment Method</label>
+          <div><label>Delivery</label><input id="co-delivery" readonly></div>
+          <div><label>Total (tk)</label><input id="co-total" readonly></div>
+        </div>
+        <div class="row">
+          <div><label>Name</label><input id="co-name" required></div>
+          <div><label>Phone</label><input id="co-phone" type="tel" required></div>
+        </div>
+        <div><label>Address</label><textarea id="co-address" required></textarea></div>
+        <div class="row">
+          <div><label>Payment Method</label>
             <select id="co-payment" required>
               <option value="">Select</option>
               <option value="Cash on Delivery">Cash on Delivery</option>
               <option value="Bkash">Bkash</option>
             </select>
           </div>
-          <div>
-            <label>Pay to (Send money)</label>
-            <input id="co-payment-number" readonly>
-          </div>
+          <div><label>Pay to</label><input id="co-payment-number" readonly></div>
         </div>
         <div class="row">
-          <div>
-            <label>Pay Now (tk)</label>
-            <input id="co-pay-now" readonly>
-          </div>
-          <div>
-            <label>Due Amount (tk)</label>
-            <input id="co-due-amount" readonly>
-          </div>
+          <div><label>Pay Now (tk)</label><input id="co-pay-now" readonly></div>
+          <div><label>Due Amount (tk)</label><input id="co-due-amount" readonly></div>
         </div>
-        <div>
-          <label>Transaction ID</label>
-          <input id="co-txn">
-        </div>
-        <div>
-          <label>
-            <input type="checkbox" id="co-policy" required>
-            I agree to the <a href="status.html">Order Policy</a>
-          </label>
-        </div>
-        <div>
-          <p id="co-note" class="muted"></p>
-        </div>
+        <div><label>Transaction ID</label><input id="co-txn"></div>
+        <div><label><input type="checkbox" id="co-policy" required> I agree to the <a href="status.html">Order Policy</a></label></div>
         <button id="place-order-btn" type="submit">Place Order</button>
       </form>
     </div>
   </div>
 
-  <div id="cart-sidebar" class="cart-sidebar">
-    <button id="close-cart-sidebar" class="close-cart">&times;</button>
-    <h2>My Cart</h2>
-    <div id="cart-items">Your cart is empty</div> <!-- Fallback -->
-    <div id="cart-total" class="price"></div>
-    <button id="checkout-cart">Checkout</button>
+  <!-- Cart Slider -->
+  <div id="cart-slider" class="cart-slider">
+    <button id="close-cart" class="close-viewer">&times;</button>
+    <h2>Shopping Cart</h2>
+    <div id="cart-items" class="cart-items"></div>
+    <div id="cart-total" class="cart-total"><strong>Total: ৳0</strong></div>
+    <button id="checkout-cart" class="checkout-cart-btn">Checkout</button>
+    <div id="cart-empty" class="muted" style="text-align:center; padding:20px; display:none;">Your cart is empty</div>
   </div>
 
-  <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; color: #000000; font-family: Arial, sans-serif;">
-    <div>
-      <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-        <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
-      </a>
-      <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-        <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
-      </a>
-      <a href="https://wa.me/01960902526" target="_blank" style="margin: 0 10px;">
-        <img src="whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
-      </a>
+  <!-- Cart Checkout Modal -->
+  <div id="cart-checkout-modal" class="modal">
+    <div class="card modal-content">
+      <div class="modal-header">
+        <h2>Checkout (Cart)</h2>
+        <button id="cart-close-modal-btn">Close</button>
+      </div>
+      <form id="cart-checkout-form" class="form">
+        <div id="cart-co-items"></div>
+        <div class="row">
+          <div><label>Delivery Fee</label><input id="cart-co-delivery" readonly></div>
+          <div><label>Total Amount</label><input id="cart-co-total" readonly></div>
+        </div>
+        <div class="row">
+          <div><label>Name</label><input id="cart-co-name" required></div>
+          <div><label>Phone</label><input id="cart-co-phone" type="tel" required></div>
+        </div>
+        <div><label>Address</label><textarea id="cart-co-address" required></textarea></div>
+        <div class="row">
+          <div><label>Payment Method</label>
+            <select id="cart-co-payment" required>
+              <option value="">Select</option>
+              <option value="Cash on Delivery">Cash on Delivery</option>
+              <option value="Bkash">Bkash</option>
+            </select>
+          </div>
+          <div><label>Pay to</label><input id="cart-co-payment-number" readonly></div>
+        </div>
+        <div class="row">
+          <div><label>Pay Now (tk)</label><input id="cart-co-pay-now" readonly></div>
+          <div><label>Due Amount (tk)</label><input id="cart-co-due-amount" readonly></div>
+        </div>
+        <div><label>Transaction ID (if prepaid)</label><input id="cart-co-txn"></div>
+        <div><label><input type="checkbox" id="cart-co-policy" required> I agree to the <a href="status.html">Order Policy</a></label></div>
+        <button id="cart-place-order-btn" type="submit">Place Order</button>
+      </form>
     </div>
-    <h3>Newsletter</h3>
-    <form id="newsletter-form" style="max-width: 400px; margin: 0 auto;">
-      <input type="email" placeholder="Your email" required style="padding: 10px; width: 70%; border-radius: 8px; border: 1px solid #e5e7eb;">
-      <button type="submit" style="padding: 10px;">Subscribe</button>
-    </form>
-    <p>&copy; All rights reserved by The Geek Shop</p>
-    <a href="blog.html">Blog</a>
-  </footer>
+  </div>
+
+<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color: #000000; font-family: Arial, sans-serif;">
+  <div>
+    <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+      <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
+    </a>
+    <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+      <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
+    </a>
+    <a href="https://wa.me/01960902526" target="_blank" style="margin: 0 10px;">
+      <img src="whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
+    </a>
+  </div>
+  <p>&copy; All rights reserved by The Geek Shop</p>
+</footer>
 </body>
 </html>
