--- a/products.html
+++ b/products.html
@@ -6,11 +6,33 @@
   <title>Products</title>
   <link rel="icon" type="image/x-icon" href="logo t.png"> 
   <link rel="stylesheet" href="style.css">
+  <script type="module">
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
+    import { getAuth } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js';
+    import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
+  </script>
   <script type="module" src="script.js"></script>
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '655776497078930');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
 </head>
 <body>
   <header class="site-header">
-    <nav>
+     <nav>
       <a href="index.html" class="logo">
         <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
       </a>
@@ -18,39 +40,15 @@
         <a href="products.html">Products</a>
         <a href="status.html">Order Status</a>
         <a href="admin.html">Admin</a>
-        <input id="search-input" type="search" placeholder="Search products..." style="padding: 6px 10px; border-radius: 8px; border: 1px solid #e5e7eb; margin-left: 14px;">
-        <a href="#" id="cart-link">Cart <span id="cart-count">0</span></a>
-        <button id="dark-mode-toggle">Toggle Dark Mode</button>
-        <a href="login.html">Login/Register</a>
+        <a id="cart-link" style="cursor: pointer;">Cart (<span id="cart-count">0</span>)</a>
       </div>
     </nav>
   </header>
 
- <main class="container products">
-    <div id="filters" class="sidebar card">
-      <h3>Filters</h3>
-      <div class="filter-group">
-        <h4>Price Range</h4>
-        <label>Min Price</label>
-        <input id="filter-price-min" type="number" placeholder="Min">
-        <label>Max Price</label>
-        <input id="filter-price-max" type="number" placeholder="Max">
-      </div>
-      <div class="filter-group">
-        <h4>Colors</h4>
-        <div id="color-filters"></div>
-      </div>
-      <div class="filter-group">
-        <h4>Availability</h4>
-        <div id="availability-filters"></div>
-      </div>
-      <label class="hot-deal-label"><input type="checkbox" id="filter-hot-deal"> Hot Deals Only</label>
-      <button id="clear-filters" class="secondary">Clear Filters</button>
-    </div>
-    <div class="main-content">
-      <h1 id="products-title">Products</h1>
-      <div id="product-list" class="product-list"></div>
-    </div>
+ <main class="container">
+    <h1 id="products-title">Products</h1>
+    
+    <div id="product-list" class="product-list"></div>
   </main>
 
   <div id="image-viewer" class="image-viewer">
@@ -58,34 +56,68 @@
     <img id="viewer-img" src="" alt="">
   </div>
 
-  <!-- Cart Sidebar -->
-  <div id="cart-sidebar" class="cart-sidebar">
-    <button id="close-cart-sidebar" class="close-cart">&times;</button>
-    <h2>My Cart</h2>
-    <div id="cart-items"></div>
-    <div id="cart-total" class="price"></div>
-    <button id="checkout-cart">Checkout</button>
+  <!-- Cart Slider -->
+  <div id="cart-slider" class="cart-slider">
+    <button id="close-cart" class="close-viewer">&times;</button>
+    <h2>Shopping Cart</h2>
+    <div id="cart-items" class="cart-items"></div>
+    <div id="cart-total" class="cart-total"><strong>Total: ৳0</strong></div>
+    <button id="checkout-cart" class="checkout-cart-btn">Checkout</button>
+    <div id="cart-empty" class="muted" style="text-align:center; padding:20px; display:none;">Your cart is empty</div>
   </div>
 
-  <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; color: #000000; font-family: Arial, sans-serif;">
-    <div>
-      <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-        <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
-      </a>
-      <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-        <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
-      </a>
-      <a href="https://wa.me/01960902526" target="_blank" style="margin: 0 10px;">
-        <img src="whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
-      </a>
+  <!-- Cart Checkout Modal -->
+  <div id="cart-checkout-modal" class="modal">
+    <div class="card modal-content">
+      <div class="modal-header">
+        <h2>Checkout (Cart)</h2>
+        <button id="cart-close-modal-btn">Close</button>
+      </div>
+      <form id="cart-checkout-form" class="form">
+        <div id="cart-co-items"></div>
+        <div class="row">
+          <div><label>Delivery Fee</label><input id="cart-co-delivery" readonly></div>
+          <div><label>Total Amount</label><input id="cart-co-total" readonly></div>
+        </div>
+        <div class="row">
+          <div><label>Name</label><input id="cart-co-name" required></div>
+          <div><label>Phone</label><input id="cart-co-phone" type="tel" required></div>
+        </div>
+        <div><label>Address</label><textarea id="cart-co-address" required></textarea></div>
+        <div class="row">
+          <div><label>Payment Method</label>
+            <select id="cart-co-payment" required>
+              <option value="">Select</option>
+              <option value="Cash on Delivery">Cash on Delivery</option>
+              <option value="Bkash">Bkash</option>
+            </select>
+          </div>
+          <div><label>Pay to</label><input id="cart-co-payment-number" readonly></div>
+        </div>
+        <div class="row">
+          <div><label>Pay Now (tk)</label><input id="cart-co-pay-now" readonly></div>
+          <div><label>Due Amount (tk)</label><input id="cart-co-due-amount" readonly></div>
+        </div>
+        <div><label>Transaction ID (if prepaid)</label><input id="cart-co-txn"></div>
+        <div><label><input type="checkbox" id="cart-co-policy" required> I agree to the <a href="status.html">Order Policy</a></label></div>
+        <button id="cart-place-order-btn" type="submit">Place Order</button>
+      </form>
     </div>
-    <h3>Newsletter</h3>
-    <form id="newsletter-form" style="max-width: 400px; margin: 0 auto;">
-      <input type="email" placeholder="Your email" required style="padding: 10px; width: 70%; border-radius: 8px; border: 1px solid #e5e7eb;">
-      <button type="submit" style="padding: 10px;">Subscribe</button>
-    </form>
-    <p>&copy; All rights reserved by The Geek Shop</p>
-    <a href="blog.html">Blog</a>
-  </footer>
+  </div>
+
+<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
+  <div>
+    <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+      <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
+    </a>
+    <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+      <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
+    </a>
+    <a href="https://wa.me/01960902526" target="_blank" style="margin: 0 10px;">
+      <img src="whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
+    </a>
+  </div>
+  <p>&copy; All rights reserved by The Geek Shop</p>
+</footer>
 </body>
 </html>
